# SpamWatchAPI

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.prod  README.md  docker-compose.prod.yml  docker-compose.yml  docker-postgres.sh  example.config.toml  shell.nix
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug.md  ci_feedback.md  config.yml
.gitlab/: CODEOWNERS
docs/: README.md  mkdocs.yml
migrations/20200612002126_initial/: down.sql  up.sql
migrations/20200612004225_antiflood/: down.sql  up.sql
migrations/20200612020854_message-field/: down.sql  up.sql
src/: database.rs  errors.rs  guards.rs  main.rs  response.rs  settings.rs  utils.rs
src/routes/: banlist.rs  mod.rs  root.rs  tokens.rs
src/tests/: mod.rs  root.rs  tokens.rs
