[package]
name = "SpamWatchAPI"
version = "0.0.0"
authors = ["SitiSchu <admin@sitischu.com>"]
edition = "2018"
description = "API for t.me/SpamWatch to query User IDs for their ban status and reason."
homepage = "https://github.com/SpamWatch/SpamWatchAPI"
repository = "https://github.com/SpamWatch/SpamWatchAPI"

[dependencies]
nanoid = "0.2"
config = "0.9"
actix-web = "1.0"
env_logger = "0.6"
slog = "2.4"
slog-term = "2.4"
slog-async = "2.3.0"
postgres = { version = "0.16.0-rc.2", features = ["with-serde_json-1"] }
serde_json = "1.0"
dirs = "2.0"

[dev-dependencies]
actix-service = "0.4"
