[package]
name = "SpamWatchAPI"
version = "0.1.0"
authors = ["SitiSchu <admin@sitischu.com>"]
edition = "2018"
description = "API for t.me/SpamWatch to query User IDs for their ban status and reason."
homepage = "https://github.com/SpamWatch/SpamWatchAPI"
repository = "https://github.com/SpamWatch/SpamWatchAPI"

[dependencies]
nanoid = "0.2"
config = "0.9"
actix-web = "1.0"
slog = "2.4"
slog-term = "2.4"
slog-async = "2.3.0"
# postgres-derive = "0.3"
# Use a fork until https://github.com/sfackler/rust-postgres-derive/pull/15 is merged
postgres-derive = {git="https://github.com/SitiSchu/rust-postgres-derive"}
serde = "1.0.8"
serde_json = "1.0.2"
dirs = "2.0"
failure = "0.1"
lazy_static = "1.3.0"
chrono = { version = "0.4", features = ["serde"] }

[dependencies.postgres]
# Use master for https://github.com/sfackler/rust-postgres/commit/c0fcf34eb4877c2141ea9c823835db79c9153958
#version="0.16.0-rc.2"
git="https://github.com/sfackler/rust-postgres"
rev = "c0fcf34eb4877c2141ea9c823835db79c9153958"
features=["with-chrono-0_4"]

[dev-dependencies]
actix-service = "0.4"
