[package]
name = "SpamWatchAPI"
version = "0.2.2"
authors = ["SitiSchu <admin@sitischu.com>"]
edition = "2018"
description = "API for t.me/SpamWatch to query User IDs for their ban status and reason."
homepage = "https://github.com/SpamWatch/SpamWatchAPI"
repository = "https://github.com/SpamWatch/SpamWatchAPI"
license = "AGPL-3.0"

[dependencies]
nanoid = "0.2"
config = "0.9"
actix-web = "1.0"
slog = "2.4"
slog-term = "2.4"
slog-async = "2.3.0"
serde = "1.0.8"
serde_json = "1.0.2"
dirs = "2.0"
failure = "0.1"
lazy_static = "1.3.0"
chrono = { version = "0.4", features = ["serde"] }
postgres = "0.17"
postgres-types = { version = "0.1", features = ["derive", "with-chrono-0_4"] }

[dev-dependencies]
actix-service = "0.4"
